# Desman

./: .gitignore  README.md  pyproject.toml
agent/: config.py  demo_prep.py  loop.py  mcp_client.py  ollama_client.py  orchestration.py  orchestrator.py  providers.py  tool_scope.py  worker.py
config/: config.example.yaml
examples/: freshdesk_ticket_fields_example.csv  freshdesk_tickets_example.csv  freshservice_assets_example.csv
mcp_servers/freshdesk/: .env.example  README.md  freshdesk_server.py
mcp_servers/freshservice/: .env.example  README.md  freshservice_server.py
mcp_servers/rag/: README.md  rag_server.py
mcp_servers/websearch/: .env.example  README.md  websearch_server.py
scripts/: check_env.py
ui/: app.py  app_fastapi.py
ui/static/: index.html
